apps/bee/librechat/base/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: librechat
  namespace: librechat
spec:
  parentRefs:
    - name: bee-gateway
      namespace: gateways
      sectionName: xtinto.com-https
  hostnames:
    - chat.xtinto.com
  rules:
    - backendRefs:
        - name: librechat
          port: 3080
